# WDA-core

./: CMakeLists.txt  build.sh  convert_wall.ipynb  local.sh  update.sh
data/: data1.py  data2.py  data3.py
docker/: Dockerfile-local  Dockerfile.cn  Dockerfile.en  docker-compose.jupyter.yml  docker-compose.yml  jupyter_notebook_config.py
src/: CMakeLists.txt  main.cpp
src/common/: common.h  error.cpp  error.h  geometry.hpp
src/configurable/: CMakeLists.txt  configurable.cpp  configurable.h  variable.cpp
src/item/: beam.cpp  item.h  upright.cpp
src/method/: basic.cpp  basic.h  basic_decorate.cpp  basic_horizontal.cpp  basic_vertical.cpp  lss.cpp  method.cpp  method.h  region_method.cpp
src/room/: room.cpp  room.h
src/storage/: CMakeLists.txt  apr.cpp  apr.h  shelf.cpp  shelf.h  stack.cpp  stack.h  storage.cpp  storage.h
src/test/: CMakeLists.txt  test_basic.cpp  test_geometry.cpp
src/utils/: CMakeLists.txt  utils.hpp
