include_directories(.)
aux_source_directory(common COMMON_SRC)
aux_source_directory(storage STORAGE_SRC)
aux_source_directory(configurable CONFIGURABLE_SRC)
aux_source_directory(utils UTILS_SRC)
aux_source_directory(method METHOD_SRC)
aux_source_directory(room ROOM_SRC)
aux_source_directory(item ITEM_SRC)
pybind11_add_module(layout main.cpp ${COMMON_SRC} ${STORAGE_SRC} ${CONFIGURABLE_SRC} ${UTILS_SRC} ${METHOD_SRC} ${ROOM_SRC} ${ITEM_SRC})
target_link_libraries(layout PRIVATE glog)
add_subdirectory(test)
